# factor-e

./: .gitignore  CMakeLists.txt  README.md  build-all.sh  build.bat  build.sh  check-warnings.sh  go.bat  go.sh  ideas.md  run.bat  run.sh  schemas.md  todo.md
assets/data/: items.json  tools.json
assets/data/tiles/: layers.json  tile_sets.json  tile_types.json
assets/shaders/: large_texture.fs  large_texture.vs
assets/sprites/: dirt.aseprite  grass.aseprite  poison-flower.aseprite  rock.aseprite  selection.aseprite  star1.aseprite  tree.aseprite  world-320x180.aseprite  world-640x360.aseprite  world.aseprite
assets/sprites/cursors/: cursors.aseprite
cmake/: windows-toolchain.cmake
src/: config.cpp  config.h  controls.cpp  controls.h  item.cpp  item.h  main.cpp  main.h  mouse.cpp  mouse.h  player.cpp  player.h  tex.cpp  tex.h  ui.cpp  ui.h  world.cpp  world.h
src/include/: raygui.h
